<resources>
    <string name="app_name">Best Path</string>

    <!--For settings-->
    <string name="settings">Settings</string>
    <string name="mode">Mode</string>
     <string name="theme">Theme</string>
    <string name="sound">Sound</string>
    <string name="record">Record</string>
    <string name="thank">Thank</string>
    <string name="help">Tutorial</string>
    <string name="share">Share</string>
    <string name="removeAdds">Remove Adds</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="soundOn">Sound On</string>
    <string name="soundOff">Sound Off</string>

    <string name="detail">Detail</string>

    <!--For game-->
    <string name="selectModeNotify">mode is selected</string>
    <string name="hard">Hard</string>
    <string name="medium">Normal</string>
    <string name="easy">Easy</string>

    <string name="show_game_mode">Show Game Mode Icon</string>
    <string name="hide_game_mode">Hide Game Mode Icon</string>

    <string name="reset_player">Restart</string>

    <string name="reset_game">Try a new map</string>
    <string name="level">Level</string>
    <string name="max_level">This is the highest level</string>
    <string name="min_level">This is the lowest level</string>

    <string name="player_win">You Win!</string>
    <string name="player_lose">Try Again</string>
    <string name="cannot_reset_player">Cannot restart in this mode</string>

    <string name="stage_clear">Stage Clear</string>
    <string name="show_stage_clear">Show the Count for Stage Clear</string>
    <string name="hide_stage_clear">Hide the Count for Stage Clear</string>


    <!--for rate app dialog-->
    <string name="rate_app_dialog_title"><font fgcolor="#ff25b1e3">Rate this App</font></string>
    <string name="rate_app_dialog_text">If you like this app, please take a moment to rate it. Thank you for your support!</string>
    <string name="rate_app_yes">Rate it</string>
    <string name="rate_app_later">Remind me later</string>
    <string name="rate_app_no">No</string>

    <string name="share_app">Share this App</string>

    <string name="last_page">This is the last page</string>
    <string name="first_page">This is the first page</string>
    <!--for thank app dialog-->
    <string name="thank_title"><font fgcolor="#ff25b1e3">Thank</font></string>
    <string name="thank_text">EmojiOne and Freepik for providing free pictures. And COZIMHERE for providing the sound effect.</string>

    <!--for record dialog-->
    <string name="clear">Clear</string>

    <string name="more_features">More Features</string>
    <string name="more_features_title"><font fgcolor="#ff25b1e3">More Features</font></string>
    <string name="more_features_text">Coming soon.</string>

</resources>
