<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3">
    <LinearLayout
        android:id="@+id/SettingsSectorContainer_L1"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/theme_grey">
        <RelativeLayout
            android:id="@+id/SettingsSectorContainer_L1_1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ModeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_select_1_cyan" />
            <TextView
                android:id="@+id/ModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/ModeImage"
                android:layout_alignTop="@id/ModeImage"
                android:layout_alignRight="@id/ModeImage"
                android:layout_alignBottom="@id/ModeImage"
                android:gravity="center"
                android:text="@string/mode"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_extra_large"
                android:fontFamily="sans-serif-thin"
                />
        </RelativeLayout>
        <View
            android:id="@+id/SettingsSectorContainer_L1_Middle"
            android:layout_width="@dimen/settings_divider_thickness"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@android:color/white"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/SettingsSectorContainer_L1_2"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/SettingsSectorContainer_L1_2_1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/ThemeColorImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/ic_select_1_cyan" />
                <TextView
                    android:id="@+id/ThemeColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/ThemeColorImage"
                    android:layout_alignTop="@id/ThemeColorImage"
                    android:layout_alignRight="@id/ThemeColorImage"
                    android:layout_alignBottom="@id/ThemeColorImage"
                    android:gravity="center"
                    android:text="@string/theme"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_large"
                    android:fontFamily="sans-serif-thin"/>
            </RelativeLayout>
            <View
                android:id="@+id/SettingsSectorContainer_L1_2_Middle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_divider_thickness"
                android:gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@android:color/white"/>
            <RelativeLayout
                android:id="@+id/SettingsSectorContainer_L1_2_2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/SoundImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/ic_select_1_cyan" />
                <TextView
                    android:id="@+id/SoundText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/SoundImage"
                    android:layout_alignTop="@id/SoundImage"
                    android:layout_alignRight="@id/SoundImage"
                    android:layout_alignBottom="@id/SoundImage"
                    android:gravity="center"
                    android:text="@string/sound"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_large"
                    android:fontFamily="sans-serif-thin"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/SettingsSectorContainers_L1_L2_Middle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_divider_thickness"
        android:gravity="center"
        android:background="@android:color/white"/>
    <LinearLayout
        android:id="@+id/SettingsSectorContainer_L2"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/theme_grey_blue">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/SettingsSectorContainer_L2_1"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/SettingsSectorContainer_L2_2_1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/EffectImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/ic_select_3_green" />
                <TextView
                    android:id="@+id/EffectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/EffectImage"
                    android:layout_alignTop="@id/EffectImage"
                    android:layout_alignRight="@id/EffectImage"
                    android:layout_alignBottom="@id/EffectImage"
                    android:gravity="center"
                    android:text="@string/effect"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_large"
                    android:fontFamily="sans-serif-thin"/>
            </RelativeLayout>
            <View
                android:id="@+id/SettingsSectorContainer_L2_2_Middle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_divider_thickness"
                android:gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@android:color/white"/>
            <RelativeLayout
                android:id="@+id/SettingsSectorContainer_L2_2_2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <ImageView
                    android:id="@+id/LanguageImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="invisible"
                    android:src="@mipmap/ic_select_3_green" />
                <TextView
                    android:id="@+id/LanguageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/LanguageImage"
                    android:layout_alignTop="@id/LanguageImage"
                    android:layout_alignRight="@id/LanguageImage"
                    android:layout_alignBottom="@id/LanguageImage"
                    android:gravity="center"
                    android:text="@string/language"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_large"
                    android:fontFamily="sans-serif-thin"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/SettingsSectorContainer_L2_Middle"
            android:layout_width="@dimen/settings_divider_thickness"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@android:color/white"/>
        <RelativeLayout
            android:id="@+id/SettingsSectorContainer_L2_2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/HelpImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_select_3_green" />
            <TextView
                android:id="@+id/HelpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/HelpImage"
                android:layout_alignTop="@id/HelpImage"
                android:layout_alignRight="@id/HelpImage"
                android:layout_alignBottom="@id/HelpImage"
                android:gravity="center"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_extra_large"
                android:fontFamily="sans-serif-thin"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:id="@+id/SettingsSectorContainers_L2_L3_Middle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_divider_thickness"
        android:gravity="center"
        android:background="@android:color/white"/>
    <LinearLayout
        android:id="@+id/SettingsSectorContainer_L3"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/theme_grey">
        <RelativeLayout
            android:id="@+id/SettingsSectorContainer_L3_1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ShareImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_select_1_cyan" />
            <TextView
                android:id="@+id/ShareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/ShareImage"
                android:layout_alignTop="@id/ShareImage"
                android:layout_alignRight="@id/ShareImage"
                android:layout_alignBottom="@id/ShareImage"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_extra_large"
                android:fontFamily="sans-serif-thin"
                />
        </RelativeLayout>
        <View
            android:id="@+id/SettingsSectorContainer_L3_Middle"
            android:layout_width="@dimen/settings_divider_thickness"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@android:color/white"/>
        <RelativeLayout
            android:id="@+id/SettingsSectorContainer_L3_2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/RemoveAddsImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="invisible"
                android:src="@mipmap/ic_select_1_cyan" />
            <TextView
                android:id="@+id/RemoveAddsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/RemoveAddsImage"
                android:layout_alignTop="@id/RemoveAddsImage"
                android:layout_alignRight="@id/RemoveAddsImage"
                android:layout_alignBottom="@id/RemoveAddsImage"
                android:gravity="center"
                android:text="@string/removeAdds"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal"
                android:fontFamily="sans-serif-thin"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>